--- a/.emacs.d/README.org
+++ b/.emacs.d/README.org
@@ -103,45 +103,20 @@ Run all-the-icons-install-fonts first time
 	:custom
 	((doom-modeline-height 15)
 	 (doom-modeline-icon t)
+     (doom-themes-org-config)
 	 (doom-modeline-major-mode-icon t)))
 
 #+end_src
 
-** Catppuccin Theme
+** Theme
 
 #+begin_src emacs-lisp
-  (use-package autothemer)
-  (use-package catppuccin-theme
+  (use-package doom-themes
 	:config
-	(load-theme 'catppuccin t))
-#+end_src
-
-** Ligatures
-#+begin_src emacs-lisp
-  (use-package ligature
-	:config
-	;; Enable the "www" ligature in every possible major mode
-	(ligature-set-ligatures 't '("www"))
-	;; Enable traditional ligature support in eww-mode, if the
-	;; `variable-pitch' face supports it
-	(ligature-set-ligatures 'eww-mode '("ff" "fi" "ffi"))
-	;; Enable all Cascadia Code ligatures in programming modes
-	(ligature-set-ligatures 'prog-mode '("|||>" "<|||" "<==>" "<!--" "####" "~~>" "***" "||=" "||>"
-										 ":::" "::=" "=:=" "===" "==>" "=!=" "=>>" "=<<" "=/=" "!=="
-										 "!!." ">=>" ">>=" ">>>" ">>-" ">->" "->>" "-->" "---" "-<<"
-										 "<~~" "<~>" "<*>" "<||" "<|>" "<$>" "<==" "<=>" "<=<" "<->"
-										 "<--" "<-<" "<<=" "<<-" "<<<" "<+>" "</>" "###" "#_(" "..<"
-										 "..." "+++" "/==" "///" "_|_" "www" "&&" "^=" "~~" "~@" "~="
-										 "~>" "~-" "**" "*>" "*/" "||" "|}" "|]" "|=" "|>" "|-" "{|"
-										 "[|" "]#" "::" ":=" ":>" ":<" "$>" "==" "=>" "!=" "!!" ">:"
-										 ">=" ">>" ">-" "-~" "-|" "->" "--" "-<" "<~" "<*" "<|" "<:"
-										 "<$" "<=" "<>" "<-" "<<" "<+" "</" "#{" "#[" "#:" "#=" "#!"
-										 "##" "#(" "#?" "#_" "%%" ".=" ".-" ".." ".?" "+>" "++" "?:"
-										 "?=" "?." "??" ";;" "/*" "/=" "/>" "//" "__" "~~" "(*" "*)"
-										 "\\\\" "://"))
-	;; Enables ligature checks globally in all buffers. You can also do it
-	;; per mode with `ligature-mode'.
-	(global-ligature-mode t))
+    (setq doom-themes-enable-bold t
+		doom-themes-enable-italic t)
+    (load-theme 'doom-one t)
+    (doom-themes-neotree-config))
 #+end_src
 
 ** Dashboard
@@ -264,7 +239,8 @@ I use general for my keybindings
 	"tb" '(switch-to-buffer :which-key "Switch to a particular buffer")
 	;;dap mode
 	"da" '(dap-breakpoint-add :which-key "Add a breakpoint")
-	"dd" '(dap-breakpoint-delete :which-key "Delete the breakpoint"))
+	"dd" '(dap-breakpoint-delete :which-key "Delete the breakpoint")
+	"f" '(treemacs :which-key "Treemacs"))
 #+end_src
 
 * Project Management
@@ -317,6 +293,11 @@ Setting up Dired
 	  "H" 'dired-hide-dotfiles-mode))
 #+end_src
 
+** Treemacs (Ik.. Not dired)
+#+begin_src emacs-lisp
+  (use-package treemacs)
+#+end_src
+
 * Development
 ** Setting up LSP Mode
    
@@ -325,7 +306,7 @@ Setting up Dired
 	:commands
 	(lsp lsp-deferred)
 	:hook
-	((c++-mode c-mode web-mode vue-mode) . lsp)
+	((c++-mode solidity-mode c-mode web-mode vue-mode) . lsp)
 	:init
 	(setq lsp-keymap-prefix "C-c l")  ;; Or 'C-l', 's-l'
 	:custom
@@ -571,7 +552,7 @@ Setting up Dired
 					(org-level-6 . 1.1)
 					(org-level-7 . 1.1)
 					(org-level-8 . 1.1)))
-	  (set-face-attribute (car face) nil :font "MesloLGS Nerd Font Mono" :weight 'regular :height (cdr face))))
+	  (set-face-attribute (car face) nil :font "FiraCode Nerd Font Mono" :weight 'regular :height (cdr face))))
   (use-package org
 	:hook
 	(org-mode . sme/org-font-setup)
